Fix long words not wrapping in announcements panel

--- a/app/css/openfusion-layout.scss
+++ b/app/css/openfusion-layout.scss
@@ -88,6 +88,7 @@ body {
   font-size: 0.75em;
   height: 100%;
   display: inline-block;
+  word-wrap: break-word;
   text-wrap: wrap;
   overflow-y: auto;
   padding: 5px;
